--- a/requirements/base.in
+++ b/requirements/base.in
@@ -1,7 +1,9 @@
 # Core requirements for using this application
 
 # Django/Framework Packages
-django>=1.8,<1.9a
+# Mihara: We'll have to fix this if we ever upgrade edx.
+django==1.8.18
+
 django-model-utils>=2.3.1
 djangorestframework>=3.1
 django-ipware>=1.1.0
